testing fix for grey bg images on mobile device at home creen

--- a/assets/scss/service.scss
+++ b/assets/scss/service.scss
@@ -129,7 +129,7 @@
             padding: 10px;
           }
           @media #{$mobile_device} {
-            padding: 15px;
+            padding: 20px 15px;
           }
           h4 {
             font-size: 22px;
